memory settings added